# SmartChain-Hub

./: .gitignore  README.md
ai-agent/: Dockerfile  docker-compose.yml  requirements.txt
ai-agent/models/: savings_model.py
ai-agent/scripts/: generate_training_data.py  optimizeTransaction.py  optimizer.py  train_model.py
ai-agent/server/: app.py
ai-agent/tests/: test_all_types.py  test_api.py  test_exploratory.py  test_functional.py  test_integration.py  test_optimizer.py
blockchain/: hardhat.config.js  package-lock.json  package.json
blockchain/contracts/: SmartChainPayments.sol  SmartChainRevenue.sol  SmartChainTransaction.sol
blockchain/rust-optimizer/: Cargo.toml
blockchain/rust-optimizer/src/: lib.rs
blockchain/scripts/: deploy.js  interactBlockchain.js
blockchain/tests/: SmartChain.test.js  SmartChainPayments.test.js  contractTests.js  integration.test.js
docs/: qa.md
docs/System Architecture/: SmartChain_Hub_System_Architecture.md
docs/backend/: SmartChain_Hub_Backend_Integration.md  SmartChain_Hub_Backend_Integration_Supabase (1).md  SmartChain_Hub_Backend_Structure_Supabase.md  supabase_additional_policies.sql  supabase_schema.sql
docs/dashboard/: SmartChain_Hub_Dashboard_Landing_Page (2).md  SmartChain_Hub_Dashboard_Landing_Page.md
docs/demo/: SmartChain_Hub_Pitch_Deck.md
docs/design/: AI_Agent_UX_Design_SmartChain_Hub.md  SmartChain_Hub_System_Design_Prompt_Updated.md
docs/problemstatement/: SmartChain_Hub_Description.md  (+1 more)
smartchain_hub_backend/: app.js  package.json
smartchain_hub_frontend/: package-lock.json  package.json
(+65 files in other folders)
