[package]
name = "smartchain-rust-optimizer"
version = "0.1.0"
edition = "2021"
description = "High-performance Rust layer for verifying AI transaction optimizations on 0G Chain."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
# Standard library for Wasm contracts (CosmWasm-style)
cosmwasm-std = "1.5.0"
schemars = "0.8.15"

[dev-dependencies]
cosmwasm-schema = "1.5.0"
